--- a/xrf_explorer/client/src/assets/index.css
+++ b/xrf_explorer/client/src/assets/index.css
@@ -68,14 +68,10 @@
 @layer base {
   * {
     @apply border-border;
+    @apply text-sm;
+    @apply select-none;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
-
-* {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  user-select: none;
 }
