--- a/xrf_explorer/client/src/assets/index.css
+++ b/xrf_explorer/client/src/assets/index.css
@@ -28,6 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
 
+    --selection: 0.16 1% 0.5%;
+    --selection-foreground: 60 100% 50%;
+
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
@@ -58,6 +61,9 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
+
+    --selection: 0.16 1% 0.5%;
+    --selection-foreground: 0 0% 100%;
 
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
