--- a/xrf_explorer/client/src/assets/index.css
+++ b/xrf_explorer/client/src/assets/index.css
@@ -28,8 +28,8 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
 
-    --selection: 0.16 1% 0.5%;
-    --selection-foreground: 60 100% 50%;
+    --selection: var(--background);
+    --selection-foreground: var(--foreground);
 
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
@@ -61,9 +61,6 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
-
-    --selection: 0.16 1% 0.5%;
-    --selection-foreground: 0 0% 100%;
 
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
