--- a/xrf_explorer/client/src/assets/index.css
+++ b/xrf_explorer/client/src/assets/index.css
@@ -35,6 +35,7 @@
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
     --radius: 0.5rem;
+    --selection-opacity: 0.15;
   }
 
   .dark {
@@ -65,6 +66,7 @@
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 35.5 91.7% 32.9%;
+    --selection-opacity: 0.4;
   }
 }
 
